Fix styling of code blocks.
We had grey bars that came from Zurb, and they were too wide because they were not included in the max-width: 600 that everything else was.

--- a/_sass/_springboard.scss
+++ b/_sass/_springboard.scss
@@ -14,7 +14,7 @@ $springboard-width: 600px;
             margin-left: auto;
             margin-right: auto;
         }
-        >p,>ul,>pre,>div,>ol {
+        >p,>ul,>pre,>div,>ol,>figure {
             max-width: $springboard-width;
             margin-left: auto;
             margin-right: auto;
